--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "assemblyscript": "github:AssemblyScript/assemblyscript",
+    "benchmark": "^2.1.4",
     "onchange": "^6.1.0"
   },
   "dependencies": {
