--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --sourceMap --validate --debug",
     "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --sourceMap --validate --optimize",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
-    "asbuild:watch": "onchange -i 'assembly/**/*' -- npm run asbuild"
+    "asbuild:watch": "onchange -i 'assembly/**/*' -- npm run asbuild",
+    "serve-demo": "static-server"
   },
   "author": "",
   "license": "ISC",
